--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head><style>ytd-live-chat-frame#chat { display: none; }</style><style>#watch-discussion, #watch7-discussion, ytd-comments { display: none; }</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>New Tab</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="index.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <center>
@@ -20,5 +20,5 @@
     <div id="quotemsg"></div>
   </center>
   </body>
-     <script src="index.js"></script>
+     <script src="index.min.js"></script>
 </html>
