--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head><style>ytd-live-chat-frame#chat { display: none; }</style><style>#watch-discussion, #watch7-discussion, ytd-comments { display: none; }</style>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>New Tab</title>
     <link href="index.min.css" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
   </head>
   <body>
+    <div class="overlay">
     <center>
     <br><br><br><br>
     <h1 class="time">
@@ -15,10 +17,11 @@
     <h2 class="greeting">
     <div id="greetingmsg"></div>
   </h2>
-  <br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br>
    <h3 class ="quote">
     <div id="quotemsg"></div>
   </center>
+</div>
   </body>
      <script src="index.min.js"></script>
 </html>
